--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -145,7 +145,31 @@
                 <div class="input-group-append">
                   <button type="submit" class="btn btn-primary btn-block h-100 btn-sm btn-fade postReply" id="{{this._id}}">Reply <i class="fas fa-chevron-right"></i></button>
                 </div>
+                
               </div>
+              
+              <div class="form-row my-2 input-group replyEmojiWindow">
+    <div style="margin-right:.5rem;display:inline;">Click to add:</div>
+    <div class="replyEmoji">🍭</div>
+    <div class="replyEmoji">🍬</div>
+    <div class="replyEmoji">👍</div>
+    <div class="replyEmoji">👎</div>
+    <div class="replyEmoji">😀</div>
+    <div class="replyEmoji">😎</div>
+    <div class="replyEmoji">😍</div>
+    <div class="replyEmoji">🤨</div>
+    <div class="replyEmoji">😑</div>
+    <div class="replyEmoji">😶</div>
+    <div class="replyEmoji">🙃</div>
+    <div class="replyEmoji">👻</div>
+    <div class="replyEmoji">🐶</div>
+    <div class="replyEmoji">🐱</div>
+    <div class="replyEmoji">🌞</div>
+    <div class="replyEmoji">🌝</div>
+    <div class="replyEmoji">❤️</div>
+    <div class="replyEmoji">💯</div>
+    <div class="replyEmoji">🏳️‍🌈</div>
+  </div><button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button>
             </div>
           {{/if}}
         </div>
