--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -73,7 +73,10 @@ $(function() {
   })
   $('body').on('click', '.replyToComment', function() {
     let replyTextarea = $(this).closest(".replyContainer").children("#replyForm").find("#commentContent")
-    replyTextarea.val(replyTextarea.val() + "@" + $(this).attr("data-username") + " ").focus()
+    replyTextarea.val(replyTextarea.val() + "@" + $(this).attr("data-username") + " ").focus(function() {
+      var textareaValue = $(this).val();
+      $(this).val(textareaValue);
+    })
   })
   $('body').on('click', '.deletePost', function() {
     var element = $(this);
