--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -153,7 +153,7 @@
                       <i class="fas fa-reply"></i>
                     </button>
                     {{#if this.canDelete }}
-                      <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../../post._id}}" data-comment-id="{{this._id}}">
+                      <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../_id}}" data-comment-id="{{this._id}}">
                         &times;
                       </button>
                     {{/if}}
@@ -353,7 +353,7 @@
                         <i class="fas fa-reply"></i>
                       </button>
                       {{#if this.canDelete }}
-                        <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../../post._id}}" data-comment-id="{{this._id}}">
+                        <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../_id}}" data-comment-id="{{this._id}}">
                           &times;
                         </button>
                       {{/if}}
@@ -510,7 +510,7 @@
                           <i class="fas fa-reply"></i>
                         </button>
                         {{#if this.canDelete }}
-                          <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../../post._id}}" data-comment-id="{{this._id}}">
+                          <button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="{{this._id}}" data-post-id="{{../_id}}" data-comment-id="{{this._id}}">
                             &times;
                           </button>
                         {{/if}}
