--- a/public/css/image-upload-preview.css
+++ b/public/css/image-upload-preview.css
@@ -59,7 +59,7 @@
     transition: all 0.2s ease;
     margin-top: 20px;
     margin-bottom: 40px;
-    height: 400px;
+    height: 100%;
     width: 100%;
     border-radius: 4px;
     background-size: contain;
