--- a/public/css/style.css
+++ b/public/css/style.css
@@ -675,9 +675,12 @@ hr {
 }
 
 .custom-file-container__image-clear {
+    background-color: #ffffff99;
     color: #000000;
+    border-radius: 90%;
+    width: 1.5em;
     font-size: 2em;
-    text-align: right;
+    text-align: center;
     position: absolute;
     right: 20px;
     top: 7px;
